# Slidingwindow

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cpp-build.yml
include/: duplicatechecker.hpp
src/: duplicatechecker.cpp  main.cpp
